src/styles/styles.scss
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  overflow-x: hidden;
  background: #f4f4f4 !important;
  font-variant-ligatures: none;
  text-rendering: optimizelegibility;
  text-decoration-skip-ink: auto;
}

@font-face {
  font-family: "BobsBurgers";
  src: url("/assets/fonts/Bob's\ Burgers.woff") format("woff"),
    url("/assets/fonts/Bob's\ Burgers.ttf") format("truetype");
}

.theme-toggle:hover {
  cursor: pointer !important;
}

.rounded-circle {
  color: #ffffff;
}

.p-datatable-wrapper {
  border-radius: 0.5em;
}

.p-dropdown-panel {
  z-index: 1100 !important;
}

.copy-button {
  position: absolute;
  top: 15px;
  right: 18px;
}

.url-block span {
  color: #000000 !important;
}

.copy-button:hover {
  border-radius: 50%;
  cursor: pointer;
  color: #555454;
}

.header {
  font-family: "BobsBurgers" !important;
  font-size: 6rem !important;
  margin-top: 100px !important;
}

.p-menubar-start {
  display: flex;
  margin-right: auto;
}

:not(.dark-mode) {
  .p-menubar .p-menuitem-link:not(.p-disabled):hover,
  .p-menubar .p-menuitem-link:not(.p-disabled):hover .p-menuitem-text {
    background: #ffffff;
    color: #3b99fc !important;

    i,
    .p-button-icon {
      color: #3b99fc !important;
      background: #ffffff;
    }
  }
}

.sidebar {
  margin-top: 63px;
  min-height: 100vh;
  overflow: auto;
}

.main-content {
  margin-top: 63px;
}

#jumbotron {
  background-image: url("/assets/images/banner.png");
  background-position: center;
  background-size: cover;
  height: 500px;
}

.p-carousel-items-content {
  padding: 0.5em !important;
}

.p-card {
  height: 100% !important;
}

.character-card {
  box-shadow: 0 0 6px 0 hsla(0, 0%, 0%, 0.2);
  border: 0;
  background: #ffffff;
  overflow-wrap: break-word;
  word-wrap: break-word !important;
  padding: 0.5em;
  display: flex;
  height: 95% !important;
  flex-direction: column;
}

.character-card h3 {
  letter-spacing: -0.025em !important;
}

@media screen and (max-width: 450px) {
  .header {
    margin-top: 20px !important;
    font-size: 5rem !important;
  }
  .highlight-block {
    margin-top: 0.5em !important;
  }
}

@media screen and (min-width: 768px) {
  .character-card {
    margin-right: 0.5em;
  }
}

@media only screen and (max-width: 1000px) {
  .header {
    margin-top: 20px !important;
  }

  .p-inputgroup-addon {
    width: 45% !important;
    font-size: 14px;
    min-width: 0px !important;
  }

  .p-menubar-button {
    display: none !important;
  }

  .copy-button {
    top: 5px;
    right: 2px;
  }

  .p-toast-top-right {
    right: 5px !important;
  }

  .p-toast {
    width: 90% !important;
  }
}

.highlight-block {
  background-color: rgba(59, 152, 252, 0.137) !important;
  border-color: #3b99fc !important;
  color: #3b99fc !important;
  padding: 0.2em;

  .pi {
    color: #3b99fc !important;
  }
}

.info-box {
  background-color: rgba(59, 153, 252, 0.05);
  border-color: #3b99fc;
  padding: 1.5em;
  border-left: 0.2em solid #3b99fc;
}

.info-box .title {
  color: #3b99fc;
  font-size: 18px;
  font-weight: 800;
  margin: 0;
  outline: none;
  padding: 0;
}

pre {
  display: block;
  padding: 9.5px;
  margin: 0 0 10px;
  font-size: 13px;
  line-height: 1.42857143;
  word-break: break-all;
  word-wrap: break-word;
  color: #3a3f44;
  background-color: #ffffff;
  border: 1px solid #cccccc;
  border-radius: 4px;
}

a {
  text-decoration: none !important;
  color: #000000 !important;
}

a:hover {
  color: #007ad9 !important;
}

.follow-button {
  color: #ffffff !important;
}

.p-carousel .p-carousel-indicators .p-carousel-indicator.p-highlight button {
  background: #007ad9 !important;
  border: 1px solid #007ad9;
}

.p-carousel .p-carousel-indicators .p-carousel-indicator button {
  background-color: #ffffff;
  border: 1px solid #cccccc;
  border-radius: 2rem;
  box-shadow: 0 2px 6px 0 hsla(0, 0%, 0%, 0.2);
}

.custom-sidebar {
  margin-left: -0.75em !important;
}

.custom-menubar {
  z-index: 1100 !important;
}

.custom-menubar .p-menubar {
  position: fixed;
  top: 0 !important;
  box-shadow: 0 0 4px rgba(0, 0, 0, 0.25);
  z-index: 1100;
}

.p-carousel .p-carousel-content .p-carousel-prev,
.p-carousel .p-carousel-content .p-carousel-next,
.btn-outline-primary:hover {
  color: #ffffff !important;
  background-color: #007ad9 !important;
}

.p-datatable .p-datatable-tbody > tr > td,
.p-datatable .p-datatable-thead > tr > th {
  padding: 1rem 1rem !important;
  border-width: 0 0 1px 0 !important;
}

.p-datatable .p-datatable-thead > tr > th {
  background-color: #ffffff !important;
}

